fixed drag on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-body {
-  width: 100%;
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -87,5 +86,8 @@ textarea:focus {
   }
   .decaShape{
     margin-bottom: 12px;
+  }
+  .conSe{
+    margin-top: 70px;
   }
 }
